@@ -1,4 +1,4 @@
 module Cocard
   VERSION     = '0.6.4-dev'.freeze
-  RELEASEDATE = '2025-01-17'.freeze
+  RELEASEDATE = '2025-01-25'.freeze
 end
