@@ -203,7 +203,22 @@
 <div class="sect1">
 <h2 id="_0_6_4_unreleased"><a class="anchor" href="#_0_6_4_unreleased"></a>0.6.4 - unreleased</h2>
 <div class="sectionbody">
-
+<div class="ulist">
+<ul>
+<li>
+<p>SMC-B und SMC-KT übernehmen den Ort vom Kartenterminal beim Speichern</p>
+</li>
+<li>
+<p>Liste aller Kartenterminals mit SMC-B</p>
+</li>
+<li>
+<p>Gesamtübersicht über alle Notizen</p>
+</li>
+<li>
+<p>Anzeige der aktuellsten Notizen im Dashboard</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 <div class="sect1">
