@@ -2,6 +2,11 @@
 
 == 0.6.4 - unreleased
 
+* SMC-B und SMC-KT übernehmen den Ort vom Kartenterminal beim Speichern
+* Liste aller Kartenterminals mit SMC-B
+* Gesamtübersicht über alle Notizen
+* Anzeige der aktuellsten Notizen im Dashboard
+
 == 0.6.3 - 2025-01-17
 * Workflow für die PIN-Verifizierung aller Karten eines Terminals verbessert.
 * Neu: Hintergrundjob für die automatische PIN-Verifizierung (nur unterstützte Terminals). SMC-B Auto-PIN-Mode muss hierfür am Kartenterminal gleich `Automatisch` sein. xref:admin/card-terminal-edit.adoc[Mehr zur automatischen PIN-Verifizierung]
